<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/otp_box_bg"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/getOtpButton"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/get_otp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp_description"
        android:textSize="14sp"
        android:textColor="@color/greyText"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"/>

    <EditText
        android:id="@+id/otpEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/otp_box_bg"
        android:gravity="center"
        android:maxLength="6"
        android:inputType="number"
        android:hint="@string/enter_otp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:layout_height="48dp"
        android:text="@string/verify"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="24dp"/>
</LinearLayout>
